--- a/react-webpack/public/backend/templates/administrator/admin_manage_user.html
+++ b/react-webpack/public/backend/templates/administrator/admin_manage_user.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="flex items-start space-x-3 mb-2">
                             <img class="w-10 h-10 rounded-full" src="{{ url_for('static', filename='images/people.png') }}" alt="Logo"  />                                <div class="text-sm">
-                                <p class="font-bold">Lý Thu Phong <span class="text-fuchsia-500">(Người dùng tích cực)</span></p>
+                                <p class="font-bold">Lý Thu Phong <span class="text-purple-500">(Người dùng tích cực)</span></p>
                                 <p class="text-gray-600">Web của bạn rất tốt nhưng search sản chưa được tốt khi mà hỏi các câu khó.</p>
                                 <p class="text-gray-400 text-xs">Hôm nay lúc 13:37</p>
                             </div>
