modified:   react-webpack/public/backend/app.py new file:   react-webpack/public/backend/static/css/administrator/style.css new file:   react-webpack/public/backend/static/images/administrator/1.png new file:   react-webpack/public/backend/static/images/administrator/2.png new file:   react-webpack/public/backend/static/images/administrator/3.png new file:   react-webpack/public/backend/static/images/administrator/arrow.png new file:   react-webpack/public/backend/static/images/administrator/booking.png new file:   react-webpack/public/backend/static/images/administrator/icons8-tick.svg new file:   react-webpack/public/backend/static/images/administrator/money.png new file:   react-webpack/public/backend/static/images/administrator/rating.png new file:   react-webpack/public/backend/static/images/administrator/web-search.png new file:   react-webpack/public/backend/templates/administrator/admin_manage_field.html new file:   react-webpack/public/backend/templates/administrator/check_field.html modified:   react-webpack/public/backend/templates/administrator/components/sidebar.html new file:   react-webpack/public/backend/templates/administrator/statistics.html

--- a/react-webpack/public/backend/templates/administrator/components/sidebar.html
+++ b/react-webpack/public/backend/templates/administrator/components/sidebar.html
@@ -18,7 +18,7 @@
 
   <!-- Menu Item 2 -->
   <a
-    href="#"
+    href="/admin_manage_field"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -48,7 +48,7 @@
 
   <!-- Menu Item 4 -->
   <a
-    href="#"
+    href="/statistics"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -63,7 +63,7 @@
 
   <!-- Menu Item 5 -->
   <a
-    href="#"
+    href="/check_field"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
