super big update

--- a/react-webpack/public/backend/templates/administrator/components/sidebar.html
+++ b/react-webpack/public/backend/templates/administrator/components/sidebar.html
@@ -48,7 +48,7 @@
 
   <!-- Menu Item 4 -->
   <a
-    href="/statistics"
+    href="/admin_statistics"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
@@ -63,7 +63,7 @@
 
   <!-- Menu Item 5 -->
   <a
-    href="/check_field"
+    href="/admin_transaction_history"
     class="menu-item flex flex-col items-center space-y-2 py-4 hover:bg-gray-700 rounded-md"
   >
     <div class="icon w-8 h-8">
