--- a/react-webpack/public/backend/templates/administrator/dashboard.html
+++ b/react-webpack/public/backend/templates/administrator/dashboard.html
@@ -25,8 +25,8 @@
       <!-- Main Content Area -->
       <div class="flex-1 py-6 px-48 overflow-auto">
         <!-- Main Content -->
-        <!-- Top Section -->
         <div class="flex flex-col gap-4">
+          <!-- Top Section -->
           <div class="flex rounded-lg shadow-md bg-white" style="height: 300px">
             <!-- Field Image -->
             <div class="flex w-1/2 pr-2">
@@ -74,6 +74,7 @@
                 </li>
               </ul>
               <button
+                onclick="window.location.href='/admin_manage_field';"
                 class="w-36 bg-green-500 text-white py-2 rounded hover:bg-green-600 mx-auto block"
               >
                 Đi tới
@@ -172,6 +173,7 @@
                   </div>
                 </div>
                 <button
+                  onclick="window.location.href='/admin_statistics';"
                   class="w-36 bg-green-500 text-white py-2 rounded hover:bg-green-600 mx-auto block"
                 >
                   Đi tới
@@ -213,7 +215,7 @@
                 class="flex flex-col justify-between p-4 rounded-lg shadow-md bg-white"
                 style="height: 400px"
               >
-                <h2 class="text-lg font-semibold mb-4">Lịch sử giao dịch</h2>
+                <h2 class="text-lg font-semibold">Lịch sử giao dịch</h2>
                 <ul class="max-h-64 overflow-y-auto border rounded-lg p-2">
                   <li class="flex justify-between py-2">
                     <div class="flex flex-col">
