--- a/react-webpack/public/backend/templates/administrator/admin_manage_user.html
+++ b/react-webpack/public/backend/templates/administrator/admin_manage_user.html
@@ -49,7 +49,7 @@
       }
     </style>
   </head>
-  <body class="h-full">
+  <body class="h-full bg-gray-100">
     <!-- Include Navbar Component -->
     {% include 'administrator/components/navbar.html' %}
 
@@ -59,7 +59,7 @@
       <!-- Main Content Area -->
       <div class="flex-1 p-6 overflow-auto">
         <!-- Your main page content goes here -->
-        <div class="flex flex-wrap lg:flex-nowrap p-4 gap-4">
+        <div class="flex flex-row gap-4">
           <!-- Left Section -->
           <div class="flex-1 lg:w-3/5">
             <!-- User Reviews -->
