--- a/react-webpack/public/backend/templates/administrator/example.html
+++ b/react-webpack/public/backend/templates/administrator/example.html
@@ -14,7 +14,7 @@
       /* Add any custom styles here */
     </style>
   </head>
-  <body class="h-full">
+  <body class="h-full bg-gray-100">
     <!-- Include Navbar Component -->
     {% include 'administrator/components/navbar.html' %}
 
