--- a/react-webpack/public/backend/templates/owner_calendar.html
+++ b/react-webpack/public/backend/templates/owner_calendar.html
@@ -83,7 +83,9 @@
         </div>
         <script>
           function toggleDropdown() {
-            var dropdownMenu = document.getElementById
+            var dropdownMenu = document.getElementById('dropdownMenu');
+            dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+          }
         </script>
       </div>
     </div>
